// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSwatch should match the snapshot when a color is locked 1`] = `
<div
  className="ColorSwatch--div"
>
  <div
    classNAme="ColorSwatch--div--color"
    style={
      Object {
        "backgroundColor": "#FCB97D",
      }
    }
  />
  <p>
    Locked
  </p>
  <p>
    #FCB97D
  </p>
</div>
`;

exports[`ColorSwatch should match the snapshot when a color is unlocked 1`] = `
<div
  className="ColorSwatch--div"
>
  <div
    classNAme="ColorSwatch--div--color"
    style={
      Object {
        "backgroundColor": "#FCB97D",
      }
    }
  />
  <p>
    Unlocked
  </p>
  <p>
    #FCB97D
  </p>
</div>
`;
